--- a/index.html
+++ b/index.html
@@ -74,6 +74,16 @@
     </div>
     </section>
 
+    <section class="pdf-viewer">
+    <div class="pdf-column" id="col1">
+      <iframe src="pdf/01 process log web.pdf"></iframe>
+    </div>
+    <div class="pdf-column" id="col2">
+      <iframe src="pdf/01 output web.pdf"></iframe>
+    </div>
+    </section>
+
+
     <!-- Donate -->
     <section class="donate">
       <h2><a href="https://www.tbank.ru/cf/6Lt4sVIJ55N"> > DONATE</a></h2>
