--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 
     <section class="pdf-viewer">
     <div class="pdf-column" id="col1">
-      <iframe src="pdf/01 process log web.pdf"></iframe>
+      <iframe src="01 process log web.pdf"></iframe>
     </div>
     <div class="pdf-column" id="col2">
-      <iframe src="pdf/01 output web.pdf"></iframe>
+      <iframe src="01 output web.pdf"></iframe>
     </div>
     </section>
 
