Refactor PDF viewer layout in index.html
Updated PDF viewer section to improve structure and added full-width support.

--- a/index.html
+++ b/index.html
@@ -76,14 +76,18 @@
     </div>
     </section>
 
+    </main>
+
+    <!-- full-width PDF preview -->
     <section class="pdf-viewer">
-    <div class="pdf-column" id="col1">
-      <iframe src="01 process log web.pdf"></iframe>
-    </div>
-    <div class="pdf-column" id="col2">
-      <iframe src="01 output web.pdf"></iframe>
-    </div>
+      <div class="pdf-column">
+        <iframe src="pdf/01 process log web.pdf"></iframe>
+      </div>
+      <div class="pdf-column">
+        <iframe src="pdf/01 output web.pdf"></iframe>
+      </div>
     </section>
+
 
 
     <!-- Donate -->
