Update PDF iframe source paths

--- a/index.html
+++ b/index.html
@@ -81,10 +81,10 @@
     <!-- full-width PDF preview -->
     <section class="pdf-viewer">
       <div class="pdf-column">
-        <iframe src="pdf/01 process log web.pdf"></iframe>
+        <iframe src="01 process log web.pdf"></iframe>
       </div>
       <div class="pdf-column">
-        <iframe src="pdf/01 output web.pdf"></iframe>
+        <iframe src="01 output web.pdf"></iframe>
       </div>
     </section>
 
